ファイルのディレクトリ整理、ライセンスを追加

--- a/manifest.json
+++ b/manifest.json
@@ -12,9 +12,9 @@
     {
       "matches": [ "http://*/*", "https://*/*" ],
       "js": [
-        "superagent.js",
-        "api.js",
-        "openbd.js"
+        "js/superagent.js",
+        "js/api.js",
+        "js/openbd.js"
       ]
     }
   ],
